# forcodex

src/: README.md
src/backend/: CMakeLists.txt  backend.hpp  platform.cpp  platform.hpp
src/backend/ggml/: ggml.hpp
src/backend/opencl/: CMakeLists.txt  bk-opencl_backend_backup.cpp  bk-opencl_backend_backup.hpp  opencl_backend.cpp  opencl_backend.hpp  opencl_buffer.cpp  opencl_buffer.hpp  opencl_context.cpp  opencl_context.hpp  opencl_embedded_kernels.hpp  opencl_env.hpp  opencl_kernel_manager.cpp  opencl_kernel_manager.hpp  opencl_kv_cache.hpp  opencl_memory.cpp  opencl_memory.hpp
src/backend/opencl/kernels/: add.cl  mul_mat_f16_f32.cl  relu.cl  rms_norm.cl  silu.cl  softmax_f32.cl
src/core/: tensor.hpp
src/executor/: executor.cpp  executor.hpp
src/graph/: graph.cpp
src/model/: CMakeLists.txt  model_loader.cpp
src/model/common/: weights.hpp
src/model/module/: norm_attention.cpp
src/model/qwen2/: qwen2_model.cpp
src/model/qwen3/: CMakeLists.txt  qwen3_model.cpp  qwen3_model.hpp  qwen3_weight.hpp
tests/: CMakeLists.txt  logits_cmp.cpp  opencl_test.cpp  qnn_test.cpp
